--- a/WebDirectory.core/app/app/view/TwigCreerDepartement.twig
+++ b/WebDirectory.core/app/app/view/TwigCreerDepartement.twig
@@ -5,7 +5,7 @@
     {% block content %}
         <div class="container">
             <h1>Créer un Département</h1>
-            <form action="connexion" method="POST">
+            <form action="creerdepartement" method="POST">
                 {% if erreur != null %}
                     <p id="erreurConnexion">{{ erreur }}</p>
                 {% endif %}
@@ -16,7 +16,7 @@
                 <label for="etage">Etage principale : </label>
                 <input type="number" id="etage" name="etage" required>
 
-                <label for="descp">Description : </label>
+                <label for="descp">Description : (Veuillez saisir en markdown !)</label>
                 <input type="text" id="descp" name="descp" required>
 
 
