--- a/WebDirectory.core/app/app/view/squelette.twig
+++ b/WebDirectory.core/app/app/view/squelette.twig
@@ -11,13 +11,14 @@
 <nav>
     <ul>
         <a href="{{ url_for('CreerDepartement') }}">Créer Departement</a>
+        <a href="{{ url_for('ListeEntre') }}">Liste des entrés</a>
     </ul>
 
 </nav>
 <section id="main">
     {% block content %} {% endblock %}
 </section>
-<footer>© 2024 Annuaire</footer>
+<footer>© 2024 Annusuce</footer>
 </body>
 </html>
 
