--- a/WebDirectory.core/app/app/view/squelette.twig
+++ b/WebDirectory.core/app/app/view/squelette.twig
@@ -11,6 +11,12 @@
 <nav>
     <ul>
         <a href="{{ url_for('CreerDepartement') }}">Créer Departement</a>
+        {% if session['email'] is defined %}
+            <a href="{{ url_for('Deconnexion') }}" id="Deconnexion">Déconnexion</a>
+        {% else %}
+            <a href="{{ url_for('Connexion') }}" id="Connexion">Connexion</a>
+            <a href="{{ url_for('Inscription') }}" id="Inscription">Inscription</a>
+        {% endif %}
     </ul>
 
 </nav>
