--- a/WebDirectory.core/app/app/view/TwigCreateEntry.twig
+++ b/WebDirectory.core/app/app/view/TwigCreateEntry.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Créer une nouvelle entrée</h1>
-    <form action="{{ path_for('processForm') }}" method="post">
+    <form action="{{ url_for('PostCreateEntry') }}" method="post">
         <label for="nom">Nom:</label>
         <input type="text" id="nom" name="nom" required><br><br>
 
@@ -20,6 +20,9 @@
 
         <label for="fonction">Fonction:</label>
         <input type="text" id="fonction" name="fonction" required><br><br>
+
+        <label for="image">URL de l'image:</label>
+        <input type="text" id="image" name="image" ><br><br>
 
         <label for="departement">Département:</label>
         <select id="departement" name="departement" required>
