--- a/WebDirectory.core/app/app/view/squelette.twig
+++ b/WebDirectory.core/app/app/view/squelette.twig
@@ -14,10 +14,13 @@
         <a href="{{ url_for('ListeEntre') }}">Liste des entrés</a>
 
         {% if session['email'] is defined %}
+            {% if session['role'] == 100 %}
+                <a href="{{ url_for('Inscription') }}" id="Inscription">Ajouter un admin</a>
+            {% endif %}
             <a href="{{ url_for('Deconnexion') }}" id="Deconnexion">Déconnexion</a>
         {% else %}
             <a href="{{ url_for('Connexion') }}" id="Connexion">Connexion</a>
-            <a href="{{ url_for('Inscription') }}" id="Inscription">Inscription</a>
+
         {% endif %}
 
         
