--- a/WebDirectory.core/app/app/view/TwigCreateEntry.twig
+++ b/WebDirectory.core/app/app/view/TwigCreateEntry.twig
@@ -3,6 +3,10 @@
 {% block content %}
     <h1>Créer une nouvelle entrée</h1>
     <form action="{{ url_for('PostCreateEntry') }}" method="post">
+        {% if erreur != null %}
+            <p id="erreurConnexion">{{ erreur }}</p>
+        {% endif %}
+        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
         <label for="nom">Nom:</label>
         <input type="text" id="nom" name="nom" required><br><br>
 
