--- a/WebDirectory.core/app/app/view/TwigCreateEntry.twig
+++ b/WebDirectory.core/app/app/view/TwigCreateEntry.twig
@@ -1,40 +1,42 @@
 {% extends 'squelette.twig' %}
 
 {% block content %}
-    <h1>Créer une nouvelle entrée</h1>
-    <form action="{{ url_for('PostCreateEntry') }}" method="post">
-        {% if erreur != null %}
-            <p id="erreurConnexion">{{ erreur }}</p>
-        {% endif %}
-        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
-        <label for="nom">Nom:</label>
-        <input type="text" id="nom" name="nom" required><br><br>
+    <div class="container">
+        <h1>Créer une nouvelle entrée</h1>
+        <form action="{{ url_for('PostCreateEntry') }}" method="post">
+            {% if erreur != null %}
+                <p id="erreurConnexion">{{ erreur }}</p>
+            {% endif %}
+            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+            <label for="nom">Nom:</label>
+            <input type="text" id="nom" name="nom" required><br><br>
 
-        <label for="prenom">Prénom:</label>
-        <input type="text" id="prenom" name="prenom" required><br><br>
+            <label for="prenom">Prénom:</label>
+            <input type="text" id="prenom" name="prenom" required><br><br>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br><br>
 
-        <label for="telephone">Numéro de téléphone:</label>
-        <input type="text" id="telephone" name="telephone" required><br><br>
+            <label for="telephone">Numéro de téléphone:</label>
+            <input type="text" id="telephone" name="telephone" required><br><br>
 
-        <label for="telephoneBureau">Numéro de téléphone de bureau:</label>
-        <input type="text" id="telephoneBureau" name="telephoneBureau" required><br><br>
+            <label for="telephoneBureau">Numéro de téléphone de bureau:</label>
+            <input type="text" id="telephoneBureau" name="telephoneBureau" required><br><br>
 
-        <label for="fonction">Fonction:</label>
-        <input type="text" id="fonction" name="fonction" required><br><br>
+            <label for="fonction">Fonction:</label>
+            <input type="text" id="fonction" name="fonction" required><br><br>
 
-        <label for="image">URL de l'image:</label>
-        <input type="text" id="image" name="image" ><br><br>
+            <label for="image">URL de l'image:</label>
+            <input type="text" id="image" name="image"><br><br>
 
-        <label for="departement">Département:</label>
-        <select id="departement" name="departement" required>
-            {% for department in departments %}
-                <option value="{{ department.id }}">{{ department.nom }}</option>
-            {% endfor %}
-        </select><br><br>
+            <label for="departement">Département:</label>
+            <select id="departement" name="departement" required>
+                {% for department in departments %}
+                    <option value="{{ department.id }}">{{ department.nom }}</option>
+                {% endfor %}
+            </select><br><br>
 
-        <input type="submit" value="Créer">
-    </form>
+            <button type="submit" >Créer</button>
+        </form>
+    </div>
 {% endblock %}
