--- a/WebDirectory.core/app/app/view/TwigCreateEntry.twig
+++ b/WebDirectory.core/app/app/view/TwigCreateEntry.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <h1>Créer une nouvelle entrée</h1>
-        <form action="{{ url_for('PostCreateEntry') }}" method="post">
+        <form action="{{ url_for('PostCreateEntry') }}" method="post" enctype="multipart/form-data">
             {% if erreur != null %}
                 <p id="erreurConnexion">{{ erreur }}</p>
             {% endif %}
@@ -26,8 +26,8 @@
             <label for="fonction">Fonction:</label>
             <input type="text" id="fonction" name="fonction" required><br><br>
 
-            <label for="image">URL de l'image:</label>
-            <input type="text" id="image" name="image"><br><br>
+            <label for="image">Image:</label>
+            <input type="file" id="image" name="image" accept="image/*"><br><br>
 
             <label for="departement">Département:</label>
             <select id="departement" name="departement" required>
@@ -36,7 +36,7 @@
                 {% endfor %}
             </select><br><br>
 
-            <button type="submit" >Créer</button>
+            <button type="submit">Créer</button>
         </form>
     </div>
 {% endblock %}
