--- a/WebDirectory.core/app/app/view/squelette.twig
+++ b/WebDirectory.core/app/app/view/squelette.twig
@@ -32,7 +32,7 @@
 <section id="main">
     {% block content %} {% endblock %}
 </section>
-<footer>© 2024 Annusuce</footer>
+<footer>© 2024 Annuaire</footer>
 </body>
 </html>
 
